--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,6 +9,6 @@
 <body>
     <h1>hello word</h1>
     <h2>こんにちは</h2>
-    <h3>branch feature-test</h3>
+    <h3>branch feature-test by svn</h3>
 </body>
 </html>
